--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -21,6 +21,6 @@
     right: 0.5em;
     bottom: 0;
     height: 3px;
-    background: $tertiary;
+    background: var(--tertiary);
   }
 }
